src/test/fail/call_wrong_arg_type.ly
<@lily function m(integer a) {} f("a") @>
